--- a/views/add_bookmark.erb
+++ b/views/add_bookmark.erb
@@ -1,8 +1,8 @@
 <form action="/save-bookmark" method="post">
 
 <label for url>URL:</label>
-  <input type="text" name="url">
+  <input type="text" name="url" placeholder="url"/>
   <label for title >TITLE: </label>
-  <input type="text" name="title">
-  <input type="submit" value="Submit">
+  <input type="text" name="title" placeholder="title"/>
+  <input type="submit" value="Submit"/>
 </form>
