added some CSS to index.erb

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,10 @@
 <html>
 <head>
 <style>
-
+.center {
+  padding: 70px 0;
+  text-align: center;
+}
 body {
   background-color: lightblue;
 }
@@ -18,12 +21,10 @@ a {
 </head>
 <body>
 
+<div class="center""> 
 <h2>Click this link to view your bookmarks:</h2>
-<div style="text-align:center"> 
 	<b><a href="http://localhost:9292/bookmarks" target="_blank">View Bookmarks</a></b>
-</div>
 <h2>Or on this link to add a bookmark:</h2>
-<div style="text-align:center"> 
 	<b><a href="http://localhost:9292/add-bookmark" target="_blank">Add a bookmark</a></b>
 </div>
 
